notes.scss
@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css");
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: Helvetica, sans-serif;
}

body {
    background: url("https://cdn.pixabay.com/photo/2015/12/01/15/43/black-1072366_960_720.jpg");
    background-size: cover;
    background-repeat: no-repeat;
    height: 100vh;
    width: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
}

.title-container {
    text-align: center;
    width: 50%;
}

.title {
    text-transform: uppercase;
    font-weight: 900;
    color: white;
    margin-bottom: 1rem;
    text-shadow: 1px 1px black;
}

.colored {
    color: red;
    text-shadow: 1px 1px black;
}

.msg {
    color: red;
    font-weight: 900;
    font-size: 1.25rem;
    text-transform: uppercase;
    text-shadow: 1px 1px black;
}

.note {
    height: 70%;
    width: 60%;
    background-color: #ffebcd;
    margin: 1.5rem;
    display: grid;
    grid-template-rows: 10% 80% 10%;
    box-shadow: inset 50px 50px 100px white, 10px 10px 20px black;
}

.btns-container {
    background-color:#f0e68c;
    border-bottom: 1px solid black;
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.btn {
    background-color: transparent;
    border: none;
    padding: 1rem;
    cursor: pointer;
    transition: all 0.3s linear;
}

i:hover {
    transform:translateY(-4px);
    opacity: 0.5;
}

i {
    font-size: 1.5rem;
    cursor: pointer;
}

.text-area {
    height: 100%;
    width: 100%;
}


.main {
    min-height: 100%;
    width: 100%;
    resize: none;
    outline: none;
    font-size: 1.25rem;
    padding: 1rem;
    display: none;
    border: none;
}

.appear {
    display: block;
}

.tools {
    background-color:#f0e68c;
    border-top: 1px solid black;
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 0.5rem;
}

.italic-text {
    font-style: italic;
}

.bold-text {
    font-weight: 900;
}

.presentation {
    padding: 1.25rem;
    mix-blend-mode: multiply;
    color: black;
    opacity: 0.3;
    font-weight: 900;
    user-select: none;
}

/* Media queries */

@media screen and( max-width: 888px) {
    .msg {
        font-size: 0.75rem;
    }
}


@media screen and (max-width: 626px) {
    
.note {
    height: 50%;
    width: 80%;
    background-color: #ffebcd;
    margin: 1.5rem;
    display: grid;
    grid-template-rows: 10% 80% 10%;
    box-shadow: inset 50px 50px 100px white, 10px 10px 20px black;
}

.msg {
    display: none;
}

.title {
font-size: 1.5rem;
}

i {
    font-size: 1rem;
}

}

